2001-01-26  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_table): don't ignore nowrap

2001-01-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): don't
	do spell check yourself and rather pass check param to
	insert_object

2001-01-25  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (gtk_html_new): added doc comment to test doc stuff
	(gtk_html_new_from_string): added new constructor

	* gtkhtml-stream.h (gtk_html_stream_unref): moved
	gtk_html_stream_ref, gtk_html_stream_unref from gtkhtml.h

	* htmltablecell.c (calc_size): new method, take care of fixed
	height
	(clue_move_children): new helper function
	(html_table_cell_set_fixed_height): new function

	* htmlengine.c (parse_table): support <td height=[number]>

	* htmltablecell.c (html_table_cell_init): added fixed_height

2001-01-25  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_pointer_timeout): only queue a redraw if
	there is an image object to queue it on (not a background).

2001-01-24  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_pointer_timeout): draw the borders now
	that we think we've waited long enough.  The idea here is that we
	are too agressive about drawing the box where the image should be
	and it results in ugly artifacts.  Now we wait a STALL_INTERVAL
	amount of time before we start drawing the box.
	(html_image_pointer_new): initialize the timer.
	(html_image_pointer_unref): clear the timer if it is still around.
	(draw): short circuit if stall is not set.

	* htmlimage.h: add stall flag and stall timeout to track stream
	progress.

	* htmlembedded.c (calc_size): use the requisition because the
	allocation fluctuates too much.

	* gtkhtml-embedded.c (gtk_html_embedded_new): listen to the size
	parameters passed along in the html.

2001-01-24  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit.c (html_engine_spell_check_range): check for
	properties:live spell checking
