@@ -1,5 +1,8 @@
 2001-01-26  Radek Doulik  <rodo@ximian.com>
 
+	* htmlclueflow.c (html_clueflow_spell_check): draw spelled range
+	only if engine isn't frozen
+
 	* htmlengine.c (parse_table): don't ignore nowrap
 
 2001-01-25  Radek Doulik  <rodo@ximian.com>
